--- a/desktop/kde/l10n/kde-l10n-fr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-fr/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:fr</IsA>
         <Summary>French KDE4 internationalization package</Summary>
         <Description>kde-l10n-fr is the KDE4 internationalization package that provides French translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="3d0886d865feeddfd76a51bdc09f0c0dd35b2d68">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-fr-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="48b6e458e79ae2757b3abf3acf8a9bc7b8ae8edb">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-fr-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="29">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="28">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
