--- a/desktop/kde/l10n/kde-l10n-it/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-it/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:it</IsA>
         <Summary>Italian KDE4 internationalization package</Summary>
         <Description>kde-l10n-it is the KDE4 internationalization package that provides Italian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="8d99eea9d09b056dac36b95c23f6a46cf4611e0e">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-it-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="f1feccd84e51627a70fcdf15cde2c1dfd52f609a">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-it-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
