--- a/desktop/kde/l10n/kde-l10n-pt_BR/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pt_BR/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pt_BR</IsA>
         <Summary>Brasilian Portuguese KDE4 internationalization package</Summary>
         <Description>kde-l10n-pt-BR is the KDE4 internationalization package that provides Brasilian Portuguese translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="6f534550711bfc325f22ef91f622c115ffec3e96">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-pt_BR-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="5d2d4e3d840ac052ba85dc8c19e3e1cf1a8de83e">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-pt_BR-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
