--- a/desktop/kde/l10n/kde-l10n-wa/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-wa/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:wa</IsA>
         <Summary>Walloon KDE4 internationalization package</Summary>
         <Description>kde-l10n-wa is the KDE4 internationalization package that provides Walloon translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="0462c165978f86de4ef560388cc09be17f82c32b">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-wa-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="3631d1e534dd0f2559e1eaecda83edfa09543d9b">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-wa-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="21">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="20">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
