--- a/desktop/kde/l10n/kde-l10n-zh_CN/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-zh_CN/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:zh_CN</IsA>
         <Summary>Chinese Simplified KDE4 internationalization package</Summary>
         <Description>kde-l10n-zh_CN is the KDE4 internationalization package that provides Chinese Simplified translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="7bff84e4f6ee253e6fcbe8d0836a324c08c4facb">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-zh_CN-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="0baea9dc6d4cb4d61de44849c01dca50c5f8a3b7">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-zh_CN-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="29">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="28">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
