--- a/desktop/kde/l10n/kde-l10n-ar/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ar/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ar</IsA>
         <Summary>Arabic KDE4 internationalization package</Summary>
         <Description>kde-l10n-ar is the KDE4 internationalization package that provides Arabic translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="b2b1609f48e7d04a43b514767d44e6b01c508c83">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-ar-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="11cceee2afbe84373ca03d582ab608b292e035c5">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-ar-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="16">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="15">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
