--- a/desktop/kde/l10n/kde-l10n-ca/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ca/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ca</IsA>
         <Summary>Catalan KDE4 internationalization package</Summary>
         <Description>kde-l10n-ca is the KDE4 internationalization package that provides Catalan translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="8497c1dc41ce0455086e2c58868cfb7c5003aed9">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-ca-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="2cb44240765d8c5df06f7005b33ede7280945a51">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-ca-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
