--- a/desktop/kde/l10n/kde-l10n-es/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-es/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:es</IsA>
         <Summary>Spanish KDE4 internationalization package</Summary>
         <Description>kde-l10n-es is the KDE4 internationalization package that provides Spanish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="c20e0c88ea6a95b8d8e3150c1a70ec76641b2280">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-es-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="b6c6bde6e0155a3224dc29bf6897db316e798109">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-es-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="30">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
