--- a/desktop/kde/l10n/kde-l10n-hi/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-hi/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:hi</IsA>
         <Summary>Hindi KDE4 internationalization package</Summary>
         <Description>kde-l10n-hi is the KDE4 internationalization package that provides Hindi translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="e9e99a86756d87937983499827412e9101849bbd">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-hi-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="85cdb9ba3fdc0672cd916554cbe55fa483b37a51">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-hi-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="29">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="28">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
