--- a/desktop/kde/l10n/kde-l10n-ja/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-ja/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:ja</IsA>
         <Summary>Japanese KDE4 internationalization package</Summary>
         <Description>kde-l10n-ja is the KDE4 internationalization package that provides Japanese translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="125aacc6b7db2c22846371f9544d1921166a17b8">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-ja-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="d9d1039ead24b06520da75138d17c56163eeae4a">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-ja-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="29">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="28">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
