--- a/desktop/kde/l10n/kde-l10n-lt/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-lt/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:lt</IsA>
         <Summary>Lithuanian KDE4 internationalization package</Summary>
         <Description>kde-l10n-lt is the KDE4 internationalization package that provides Lithuanian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="88d1a3eb022f788f4d229a6716a0b06241c73e40">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-lt-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="c92df89f29e3b115c16706e03938dcbeafed1ad7">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-lt-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="21">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="20">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
