--- a/desktop/kde/l10n/kde-l10n-pa/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-pa/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:pa</IsA>
         <Summary>Punjabi KDE4 internationalization package</Summary>
         <Description>kde-l10n-pa is the KDE4 internationalization package that provides Punjabi translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="97b6972d1b5bd33be11e7e9cb67f67744b5147d6">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-pa-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="1f4de6c84e205920fdb54ee452084158f7f0c40d">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-pa-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="29">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="28">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
