--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -12,13 +12,14 @@
         <IsA>locale:tr</IsA>
         <Summary>Turkish KDE4 internationalization package</Summary>
         <Description>kde-l10n-tr is the KDE4 internationalization package that provides Turkish translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="dabf8eed07c421cc7de9c2004d7a66522828b834">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-tr-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="2d6a2ac11b48d3f730921dbfc810789c577ea93a">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-tr-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
         <Patches>
-            <!-- Sync translations from branches/stable/l10n-kde/tr using sync-branch-translations.sh -->
+            <!-- Sync translations from branches/stable/l10n-kde/tr using sync-branch-translations.sh
             <Patch level="0">BRANCH.patch</Patch>
+            -->
 
             <!-- Include playground-network translations too -->
             <Patch level="1">add-playground-network-dir.patch</Patch>
@@ -84,6 +85,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="54">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="53">
             <Date>2010-10-26</Date>
             <Version>4.5.2</Version>
