--- a/desktop/kde/l10n/kde-l10n-uk/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-uk/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:uk</IsA>
         <Summary>Ukrainian KDE4 internationalization package</Summary>
         <Description>kde-l10n-uk is the KDE4 internationalization package that provides Ukrainian translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="404b6005ac930423709b7de25569863e5f6d5e53">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-uk-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="3372040667fdd93b3d2ccf91f3f3786e93a02f87">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-uk-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="29">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="28">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
