--- a/desktop/kde/l10n/kde-l10n-zh_TW/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-zh_TW/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>locale:zh_TW</IsA>
         <Summary>Chinese Traditional KDE4 internationalization package</Summary>
         <Description>kde-l10n-zh_TW is the KDE4 internationalization package that provides Chinese Traditional translations for KDE4 applications.</Description>
-        <Archive type="tarbz2" sha1sum="1617d655341431ff9b5dcfce4f5a9d229eb06df5">mirrors://kde/stable/4.5.2/src/kde-l10n/kde-l10n-zh_TW-4.5.2.tar.bz2</Archive>
+        <Archive type="tarbz2" sha1sum="dc17b7dea93488c75d2b29c550b6f006e4cc0e64">mirrors://kde/stable/4.5.3/src/kde-l10n/kde-l10n-zh_TW-4.5.3.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="29">
+            <Date>2010-11-03</Date>
+            <Version>4.5.3</Version>
+            <Comment>Version bump to 4.5.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="28">
             <Date>2010-10-12</Date>
             <Version>4.5.2</Version>
