--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -17,9 +17,8 @@
             <Dependency>kdelibs-devel</Dependency>
         </BuildDependencies>
         <Patches>
-            <!-- Sync translations from branches/stable/l10n-kde/tr using sync-branch-translations.sh
-            <Patch level="0">BRANCH.patch</Patch>
-            -->
+            <!-- Sync translations from branches/stable/l10n-kde/tr using sync-branch-translations.sh-->
+            <Patch level="1">BRANCH.patch</Patch>
 
             <!-- Include playground-network translations too -->
             <Patch level="1">add-playground-network-dir.patch</Patch>
