--- a/programming/language/python/python-lxml/pspec.xml
+++ b/programming/language/python/python-lxml/pspec.xml
@@ -24,6 +24,9 @@
 
     <Package>
         <Name>python-lxml</Name>
+        <Replaces>
+            <Package>lxml</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
         </Files>
@@ -41,6 +44,13 @@
     </Package>
 
     <History>
+        <Update release="13">
+            <Date>2010-11-04</Date>
+            <Version>2.2.7</Version>
+            <Comment>Replace lxml</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="12">
             <Date>2010-10-13</Date>
             <Version>2.2.7</Version>
