corrections for replacing the old package

--- a/programming/language/python/python-icu/pspec.xml
+++ b/programming/language/python/python-icu/pspec.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE PISI SYSTEM "http://www.pardus.org.tr/projeler/pisi/pisi-spec.dtd">
 <PISI>
     <Source>
-        <Name>PyICU</Name>
+        <Name>python-icu</Name>
         <Homepage>http://pyicu.osafoundation.org/</Homepage>
         <Packager>
             <Name>Renan Çakırerk</Name>
@@ -23,6 +23,9 @@
         <RuntimeDependencies>
             <Dependency versionFrom="4.4">icu4c</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>PyICU</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
