--- a/programming/language/python/python-icu/translations.xml
+++ b/programming/language/python/python-icu/translations.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
 <PISI>
     <Source>
-        <Name>PyICU</Name>
+        <Name>python-icu</Name>
         <Summary xml:lang="tr">ICU kitaplığı için Python arayüzü</Summary>
     </Source>
 </PISI>
