Add replaces to avoid leaving systems without the necessary packages.

--- a/programming/language/python/python-reportlab/pspec.xml
+++ b/programming/language/python/python-reportlab/pspec.xml
@@ -28,6 +28,9 @@
         <RuntimeDependencies>
             <Dependency>python-imaging</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>reportlab</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
         </Files>
@@ -38,12 +41,22 @@
         <RuntimeDependencies>
             <Dependency release="current">python-reportlab</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>reportlab-docs</Package>
+        </Replaces>
         <Files>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2010-11-08</Date>
+            <Version>2.4</Version>
+            <Comment>Add replaces to avoid leaving systems without the necessary packages.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="8">
             <Date>2010-11-08</Date>
             <Version>2.4</Version>
