--- a/programming/language/python/pardus-desktop-services/pspec.xml
+++ b/programming/language/python/pardus-desktop-services/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Pardus Desktop Services</Summary>
         <Description>pardus-desktop-services is a wrapper python module for integrating various desktop environments using PyQt.</Description>
-        <Archive sha1sum="2c24ae4f6cbc308319ec4631c09b904f651446b7" type="targz">http://cekirdek.pardus.org.tr/~gokmen/files/pds-1.1.0.tar.gz</Archive>
+        <Archive sha1sum="8667645cae654353b8c9724da4a191509e63d3f1" type="targz">http://cekirdek.pardus.org.tr/~gokmen/files/pds-1.1.1.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-qt</Dependency>
         </BuildDependencies>
@@ -30,6 +30,17 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-11-09</Date>
+            <Version>1.1.1</Version>
+            <Comment>
+                - New version
+                - QProgressIndicator added
+                - Container widget added
+            </Comment>
+            <Name>Gökmen GÖKSEL</Name>
+            <Email>gokmen@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-20</Date>
             <Version>1.1.0</Version>
