numpy -> python-numpy

--- a/programming/language/python/python-rpy/pspec.xml
+++ b/programming/language/python/python-rpy/pspec.xml
@@ -24,7 +24,7 @@
        <Name>python-rpy</Name>
        <RuntimeDependencies>
            <Dependency>R</Dependency>
-           <Dependency>numpy</Dependency>
+           <Dependency>python-numpy</Dependency>
        </RuntimeDependencies>
             <Files>
                <Path fileType="library">/usr/lib</Path>
