--- a/programming/language/python/python-reportlab/pspec.xml
+++ b/programming/language/python/python-reportlab/pspec.xml
@@ -12,14 +12,14 @@
         <IsA>library</IsA>
         <Summary>PDF generator library</Summary>
         <Description>ReportLab is an PDF generation library with extensive features.</Description>
-        <Archive sha1sum="31ecc9ff0f55ce3c5fddaa909dd48b6e9e9a20ce" type="targz">http://www.reportlab.com/ftp/reportlab-2.4.tar.gz</Archive>
+        <Archive sha1sum="49bd7c2c0b42569323fe4726cac696d4249cd1a5" type="targz">http://www.reportlab.com/ftp/reportlab-2.5.tar.gz</Archive>
         <BuildDependencies>
            <Dependency>python-imaging</Dependency>
         </BuildDependencies>
         <Patches>
             <!-- Fix font locations -->
             <Patch level="1">fix-font-locations.diff</Patch>
-            <Patch level="1">reportlab-2.2_qa_msg.patch</Patch>
+	    <Patch level="1">reportlab-2.2_qa_msg.patch</Patch>
         </Patches>
     </Source>
 
@@ -50,6 +50,13 @@
     </Package>
 
     <History>
+        <Update release="10">
+            <Date>2010-11-09</Date>
+            <Version>2.5</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Ertuğrul Erata</Name>
+            <Email>ertugrulerata@gmail.com</Email>
+        </Update>
         <Update release="9">
             <Date>2010-11-08</Date>
             <Version>2.4</Version>
