--- a/programming/language/perl/perl-Locale-Maketext-Lexicon/pspec.xml
+++ b/programming/language/perl/perl-Locale-Maketext-Lexicon/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>Use other catalog formats in Maketext</Summary>
         <Description>Locale::Maketext::Lexicon provides lexicon-handling backends for Locale::Maketext to read from other localization formats, such as PO files, MO files, or from databases via the Tie interface.</Description>
-        <Archive sha1sum="297229b18585d9c35c637b395627c8dd1090729f" type="targz">mirrors://cpan/authors/id/D/DR/DRTECH/Locale-Maketext-Lexicon-0.77.tar.gz</Archive>
+        <Archive sha1sum="7b9d0c034a1febe8e9f7fc78d4a6c67058c591ce" type="targz">mirrors://cpan/authors/id/D/DR/DRTECH/Locale-Maketext-Lexicon-0.82.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
         </BuildDependencies>
@@ -34,6 +34,13 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2010-11-10</Date>
+            <Version>0.82</Version>
+            <Comment>Version bump to latest stable version.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="8">
             <Date>2010-11-10</Date>
             <Version>0.77</Version>
