--- a/programming/language/perl/perl-common-sense/pspec.xml
+++ b/programming/language/perl/perl-common-sense/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Implements some sane defaults for Perl programs</Summary>
         <Description>This module implements some sane defaults for Perl programs, as defined by two typical (or not so typical - use your common sense) specimens of Perl coders:</Description>
-        <Archive sha1sum="b2d22f779fbd648ae22d3b151a27fb4000c0e577" type="targz">mirrors://cpan/authors/id/M/ML/MLEHMANN/common-sense-3.0.tar.gz</Archive>
+        <Archive sha1sum="26ab5aa5d171267a8ae02c894a57d0cb0e651d15" type="targz">mirrors://cpan/authors/id/M/ML/MLEHMANN/common-sense-3.3.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-11-10</Date>
+            <Version>3.3</Version>
+            <Comment>Version bump to 3.3</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-01-14</Date>
             <Version>3.0</Version>
