--- a/programming/language/python/python-rpy/pspec.xml
+++ b/programming/language/python/python-rpy/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>library</IsA>
         <Summary>A very simple, yet robust, Python interface to the R Programming Language</Summary>
         <Description>RPy is a very simple, yet robust, Python interface to the R Programming Language.</Description>
-        <Archive sha1sum="3e065877e689a4f5a23c630f9e1fe12aafbe9122" type="targz">mirrors://sourceforge/rpy/rpy2-2.1.7.tar.gz</Archive>
+        <Archive sha1sum="049e869c589fa4bd743a7f96aaf3bd7013a47a70" type="targz">mirrors://sourceforge/rpy/rpy2-2.1.8.tar.gz</Archive>
        <BuildDependencies>
            <Dependency>python-numpy</Dependency>
            <Dependency>R-devel</Dependency>
@@ -33,6 +33,13 @@
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2010-11-10</Date>
+            <Version>2.1.8</Version>
+            <Comment>Version bump</Comment>
+            <Name>Necdet Yücel</Name>
+            <Email>necdetyucel@gmail.com</Email>
+        </Update>
         <Update release="6">
             <Date>2010-10-26</Date>
             <Version>2.1.7</Version>
