Add KDEPIM 4.4 translations, since we downgraded.

--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -59,6 +59,8 @@
 
             <!-- Fix for #13842 -->
             <Patch level="1">fix-xdg-user-dirs-translations.diff</Patch>
+
+            <Patch level="1">add-kdepim44-translations.diff</Patch>
         </Patches>
     </Source>
     <Package>
@@ -84,6 +86,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="55">
+            <Date>2010-11-11</Date>
+            <Version>4.5.3</Version>
+            <Comment>Add KDEPIM 4.4 translations, since we downgraded.</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="54">
             <Date>2010-11-03</Date>
             <Version>4.5.3</Version>
