enable perl-version in perl-Mail-SPF-Test.

--- a/programming/language/perl/perl-Mail-SPF-Test/pspec.xml
+++ b/programming/language/perl/perl-Mail-SPF-Test/pspec.xml
@@ -17,9 +17,7 @@
             <Dependency version="5.12.2">perl</Dependency>
             <Dependency>perl-Net-DNS</Dependency>
             <Dependency>perl-YAML</Dependency>
-            <!-- Disable perl-version for now
             <Dependency>perl-version</Dependency>
-            -->
         </BuildDependencies>
     </Source>
 
@@ -30,9 +28,7 @@
             <Dependency>perl-NetAddr-IP</Dependency>
             <Dependency>perl-Net-DNS</Dependency>
             <Dependency>perl-YAML</Dependency>
-            <!-- Disable perl-version for now
             <Dependency>perl-version</Dependency>
-            -->
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -42,6 +38,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-11-11</Date>
+            <Version>1.001</Version>
+            <Comment>Enable perl-version dependency</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-28</Date>
             <Version>1.001</Version>
