--- a/programming/language/perl/perl-Image-ExifTool/pspec.xml
+++ b/programming/language/perl/perl-Image-ExifTool/pspec.xml
@@ -5,8 +5,8 @@
         <Name>perl-Image-ExifTool</Name>
         <Homepage>http://www.sno.phy.queensu.ca/~phil/exiftool</Homepage>
         <Packager>
-            <Name>Pardus</Name>
-            <Email>admins@pardus.org.tr</Email>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
         </Packager>
         <License>Artistic</License>
         <License>GPLv2</License>
