--- a/programming/language/perl/perl-Image-ExifTool/pspec.xml
+++ b/programming/language/perl/perl-Image-ExifTool/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>app:console</IsA>
         <Summary>A command-line application for reading, writing and editing meta information in image, audio and video files</Summary>
         <Description>ExifTool is a platform-independent Perl library plus a command-line application for reading, writing and editing meta information in image, audio and video files.</Description>
-        <Archive sha1sum="af5b571d66ed4179b704f4cfa57dc8f87f630a8c" type="targz">http://www.sno.phy.queensu.ca/~phil/exiftool/Image-ExifTool-8.15.tar.gz</Archive>
+        <Archive sha1sum="e29275efa1bb84b4494842e3359726b8dd6951da" type="targz">http://www.sno.phy.queensu.ca/~phil/exiftool/Image-ExifTool-8.39.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
         </BuildDependencies>
@@ -40,6 +40,13 @@
     </Package>
 
     <History>
+         <Update release="10">
+            <Date>2010-11-12</Date>
+            <Version>8.39</Version>
+            <Comment>Version bump, See Changes for further details.</Comment>
+            <Name>Ertuğrul Erata</Name>
+            <Email>ertugrulerata@gmail.com</Email>
+        </Update>   
         <Update release="9">
             <Date>2010-03-19</Date>
             <Version>8.15</Version>
