--- a/programming/language/python/python-edje/pspec.xml
+++ b/programming/language/python/python-edje/pspec.xml
@@ -13,29 +13,29 @@
         <Summary>Edje Python binding</Summary>
         <Description>python-edje is the Python binding of Edje layout library.</Description>
         <!--<Archive sha1sum="22da7216d89be2d2e62c726931d06dd3befc3852" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-edje-0.5.0_49588.tar.bz2</Archive>-->
-        <Archive sha1sum="a6642472f6739f65c45e1e079f5bf519f3aa8c77" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-edje-0.7.3.tar.bz2</Archive>
+        <Archive sha1sum="9912815f95e68b8a6bcd82d9481b62f7125ceec6" type="tarbz2">http://download.enlightenment.org/snapshots/2010-11-12/BINDINGS/python/python-edje-0.7.3.54504.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="1.0.0_beta1">eina-devel</Dependency>
-            <Dependency versionFrom="1.4.0_beta1">eet-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">ecore-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">evas-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">edje-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">embryo-devel</Dependency>
-            <Dependency versionFrom="0.7.3">python-evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">eina-devel</Dependency>
+            <Dependency versionFrom="1.4.0_beta2">eet-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">ecore-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">edje-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">embryo-devel</Dependency>
+            <Dependency versionFrom="0.7.3_54504">python-evas-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>python-edje</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="1.0.0_beta1">eina</Dependency>
-            <Dependency versionFrom="1.4.0_beta1">eet</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">ecore</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">edje</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">embryo</Dependency>
-            <Dependency versionFrom="0.7.3">python-evas</Dependency>
-            <Dependency versionFrom="0.7.3">python-ecore</Dependency>
-            <Dependency versionFrom="0.7.3">python-e_dbus</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">eina</Dependency>
+            <Dependency versionFrom="1.4.0_beta2">eet</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">ecore</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">edje</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">embryo</Dependency>
+            <Dependency versionFrom="0.7.3_54504">python-evas</Dependency>
+            <Dependency versionFrom="0.7.3_54504">python-ecore</Dependency>
+            <Dependency versionFrom="0.7.3_54504">python-e_dbus</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -57,6 +57,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-11-13</Date>
+            <Version>0.7.3_54504</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2010-10-13</Date>
             <Version>0.7.3</Version>
