--- a/programming/language/python/python-evas/pspec.xml
+++ b/programming/language/python/python-evas/pspec.xml
@@ -13,18 +13,18 @@
         <Summary>Evas Python bindings</Summary>
         <Description>python-evas is the Python binding of Evas canvas library.</Description>
         <!--<Archive sha1sum="a91200a2bfbe39fc81f13e73338319ca8e055060" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-evas-0.5.0_49588.tar.bz2</Archive>-->
-        <Archive sha1sum="11802867a00e84495cdc8315e7ff4530b1023de8" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-evas-0.7.3.tar.bz2</Archive>
+        <Archive sha1sum="796ca3d3d0331048d6958e6e3bdbec90a80fcb8d" type="tarbz2">http://download.enlightenment.org/snapshots/2010-11-12/BINDINGS/python/python-evas-0.7.3.54504.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="1.0.0_beta1">eina-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">eina-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">evas-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>python-evas</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="1.0.0_beta1">eina</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">eina</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">evas</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -45,6 +45,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-11-13</Date>
+            <Version>0.7.3_54504</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2010-10-13</Date>
             <Version>0.7.3</Version>
