--- a/programming/language/python/python-ethumb/pspec.xml
+++ b/programming/language/python/python-ethumb/pspec.xml
@@ -13,26 +13,26 @@
         <Summary>Python bindings for Ethumb thumbnailing library</Summary>
         <Description>python-ethumb is the Python bindings for Ethumb thumbnailing library.</Description>
         <!--<Archive sha1sum="aaa129a80e1522248ba12f4379faa4b894384503" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-ethumb-0.2_49588.tar.bz2</Archive>-->
-        <Archive sha1sum="c91c1fe3168f5c436123202639961fba0b98e504" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-ethumb-0.7.3.tar.bz2</Archive>
+        <Archive sha1sum="a0e5b50be5c978222b91b97be4adbf18f5ad2228" type="tarbz2">http://download.enlightenment.org/snapshots/2010-11-12/BINDINGS/python/python-ethumb-0.7.3.54504.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="1.0.0_beta1">eina-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">evas-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">ecore-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">e_dbus-devel</Dependency>
-            <Dependency versionFrom="0.1.0_52995">ethumb-devel</Dependency>
-            <Dependency versionFrom="0.7.3">python-evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">eina-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">ecore-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">e_dbus-devel</Dependency>
+            <Dependency versionFrom="0.1.1_54472">ethumb-devel</Dependency>
+            <Dependency versionFrom="0.7.3_54504">python-evas-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>python-ethumb</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="1.0.0_beta1">eina</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">evas</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">ecore</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">e_dbus</Dependency>
-            <Dependency versionFrom="0.1.0_52995">ethumb</Dependency>
-            <Dependency versionFrom="0.7.3">python-evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">eina</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">ecore</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">e_dbus</Dependency>
+            <Dependency versionFrom="0.1.1_54472">ethumb</Dependency>
+            <Dependency versionFrom="0.7.3_54504">python-evas</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -43,6 +43,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-11-13</Date>
+            <Version>0.7.3_54504</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2010-10-13</Date>
             <Version>0.7.3</Version>
