--- a/programming/language/python/python-elementary/pspec.xml
+++ b/programming/language/python/python-elementary/pspec.xml
@@ -13,13 +13,13 @@
         <Summary>Elementary Python binding</Summary>
         <Description>python-elementary is the Python binding of Elementary widget set.</Description>
         <!--<Archive sha1sum="b50813a3cc910b704f2ff712dd96ace84e353c9f" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-elementary-0.5.0_49588.tar.bz2</Archive>-->
-        <Archive sha1sum="390ccf8a9d450978e33ce756284846108689a90a" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-elementary-0.7.3.tar.bz2</Archive>
+        <Archive sha1sum="64fa36eeff4062c0179810316b9b94320d5c0fc5" type="tarbz2">http://download.enlightenment.org/snapshots/2010-11-12/BINDINGS/python/python-elementary-0.7.3.54504.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="1.0.0_beta1">eina-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">evas-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">ecore-devel</Dependency>
-            <Dependency versionFrom="0.7.0_52995">elementary-devel</Dependency>
-            <Dependency versionFrom="0.7.3">python-evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">eina-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">ecore-devel</Dependency>
+            <Dependency versionFrom="0.7.0_54504">elementary-devel</Dependency>
+            <Dependency versionFrom="0.7.3_54504">python-evas-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">fix-check-elementary-version.patch</Patch>
@@ -29,11 +29,11 @@
     <Package>
         <Name>python-elementary</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="1.0.0_beta1">eina</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">evas</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">ecore</Dependency>
-            <Dependency versionFrom="0.7.0_52995">elementary</Dependency>
-            <Dependency versionFrom="0.7.3">python-evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">eina</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">ecore</Dependency>
+            <Dependency versionFrom="0.7.0_54504">elementary</Dependency>
+            <Dependency versionFrom="0.7.3_54504">python-evas</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -44,6 +44,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-11-13</Date>
+            <Version>0.7.3_54504</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2010-10-13</Date>
             <Version>0.7.3</Version>
