--- a/programming/language/python/python-ecore/pspec.xml
+++ b/programming/language/python/python-ecore/pspec.xml
@@ -13,20 +13,20 @@
         <Summary>Ecore Python binding</Summary>
         <Description>python-ecore is the Python binding of Ecore X abstraction library.</Description>
         <!--<Archive sha1sum="88bca4032b5241f121462b776055b330812ba571" type="tarbz2">http://cekirdek.pardus.org.tr/~ibrahim/dist/efl/python-ecore-0.5.0_49588.tar.bz2</Archive>-->
-        <Archive sha1sum="e25f317e3827ce39572571424ac55fdb775186c9" type="tarbz2">http://download.enlightenment.org/releases/BINDINGS/python/python-ecore-0.7.3.tar.bz2</Archive>
+        <Archive sha1sum="0f517eda2686d1a5de00820b1612f45e751a24b2" type="tarbz2">http://download.enlightenment.org/snapshots/2010-11-12/BINDINGS/python/python-ecore-0.7.3.54504.tar.bz2</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="1.0.0_beta1">evas-devel</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">ecore-devel</Dependency>
-            <Dependency versionFrom="0.7.3">python-evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">evas-devel</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">ecore-devel</Dependency>
+            <Dependency versionFrom="0.7.3_54504">python-evas-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>python-ecore</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="1.0.0_beta1">evas</Dependency>
-            <Dependency versionFrom="1.0.0_beta1">ecore</Dependency>
-            <Dependency versionFrom="0.7.3">python-evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">evas</Dependency>
+            <Dependency versionFrom="1.0.0_beta2">ecore</Dependency>
+            <Dependency versionFrom="0.7.3_54504">python-evas</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -48,6 +48,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-11-13</Date>
+            <Version>0.7.3_54504</Version>
+            <Comment>Version bump.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2010-10-13</Date>
             <Version>0.7.3</Version>
