--- a/programming/language/python/python-enchant/pspec.xml
+++ b/programming/language/python/python-enchant/pspec.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE PISI SYSTEM "http://www.pardus.org.tr/projeler/pisi/pisi-spec.dtd">
 <PISI>
     <Source>
-        <Name>pyenchant</Name>
+        <Name>python-enchant</Name>
         <Homepage>http://www.rfk.id.au/software/pyenchant</Homepage>
         <Packager>
             <Name>Gökmen Göksel</Name>
@@ -11,7 +11,7 @@
         <License>LGPLv3</License>
         <IsA>library</IsA>
         <Summary>Spellchecking library for Python</Summary>
-        <Description>PyEnchant is an efficient Python module for Enchant spellchecker.</Description>
+        <Description>python-enchant is an efficient Python module for Enchant spellchecker.</Description>
         <Archive sha1sum="42d33947e7258dad60e48a2e4f73a45fea3cf37b" type="targz">http://pypi.python.org/packages/source/p/pyenchant/pyenchant-1.6.3.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>enchant-devel</Dependency>
@@ -19,10 +19,13 @@
     </Source>
 
     <Package>
-        <Name>pyenchant</Name>
+        <Name>python-enchant</Name>
         <RuntimeDependencies>
             <Dependency>enchant</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pyenchant</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
