Fix silly translation of Details string

--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -61,6 +61,8 @@
             <Patch level="1">fix-xdg-user-dirs-translations.diff</Patch>
 
             <Patch level="1">add-kdepim44-translations.diff</Patch>
+
+            <Patch level="1">fix-details-translation.diff</Patch>
         </Patches>
     </Source>
     <Package>
@@ -86,6 +88,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="56">
+            <Date>2010-11-17</Date>
+            <Version>4.5.3</Version>
+            <Comment>Fix silly translation of Details string</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="55">
             <Date>2010-11-11</Date>
             <Version>4.5.3</Version>
