Replace lxml-docs too in python-lxml package.

--- a/programming/language/python/python-lxml/pspec.xml
+++ b/programming/language/python/python-lxml/pspec.xml
@@ -38,12 +38,22 @@
         <RuntimeDependencies>
             <Dependency release="current">python-lxml</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>lxml-docs</Package>
+        </Replaces>
         <Files>
             <Path fileType="doc">/usr/share/doc</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="14">
+            <Date>2010-11-25</Date>
+            <Version>2.2.7</Version>
+            <Comment>Replace lxml-docs too.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="13">
             <Date>2010-11-04</Date>
             <Version>2.2.7</Version>
