Sh*t, I forgot to change the package name in translations.xml :@

--- a/programming/language/python/python-mpmath/pspec.xml
+++ b/programming/language/python/python-mpmath/pspec.xml
@@ -27,6 +27,13 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2010-11-25</Date>
+            <Version>0.16</Version>
+            <Comment>Sh*t, I forgot to change the package name in translations.xml :@</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="8">
             <Date>2010-11-25</Date>
             <Version>0.16</Version>
