--- a/programming/language/python/pygtk/translations.xml
+++ b/programming/language/python/pygtk/translations.xml
@@ -3,9 +3,19 @@
     <Source>
         <Name>pygtk</Name>
         <Summary xml:lang="tr">Python için GTK+ bağlayıcıları</Summary>
-        <Description xml:lang="tr">PyGTK, Python programlama diliyle GTK+ kütüphanesini kullanarak, basit grafiksel kullanıcı arayüzü oluşturmanızı sağlar.</Description>
+        <Description xml:lang="tr">pygtk, Python programlama diliyle GTK+ kütüphanesini kullanarak, basit grafiksel kullanıcı arayüzü oluşturmanızı sağlar.</Description>
         <Description xml:lang="fr">Bindings (liens) GTK+2 pour Python.</Description>
     </Source>
+
+    <Package>
+        <Name>pygtk-demo</Name>
+        <Summary xml:lang="tr">pygtk için demo uygulamalar</Summary>
+    </Package>
+
+    <Package>
+        <Name>pygtk-docs</Name>
+        <Summary xml:lang="tr">pygtk için referans belgeleri</Summary>
+    </Package>
 
     <Package>
         <Name>pygtk-devel</Name>
