--- a/programming/language/python/pygtk/pspec.xml
+++ b/programming/language/python/pygtk/pspec.xml
@@ -11,8 +11,8 @@
         <License>LGPLv2.1</License>
         <IsA>library</IsA>
         <Summary>GTK+ bindings for Python</Summary>
-        <Description>PyGTK lets you to easily create programs with a graphical user interface using the Python programming language and GTK+ library.</Description>
-        <Archive sha1sum="b8998ca94841906e71b2475319bb47c841b188e8" type="tarbz2">mirrors://gnome/pygtk/2.16/pygtk-2.16.0.tar.bz2</Archive>
+        <Description>pygtk lets you to easily create programs with a graphical user interface using the Python programming language and GTK+ library.</Description>
+        <Archive sha1sum="6a180d0c9ed19179662f51decb150b2c98cc9362" type="tarbz2">mirrors://gnome/pygtk/2.22/pygtk-2.22.0.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>cairo-devel</Dependency>
             <Dependency>pango-devel</Dependency>
@@ -23,10 +23,6 @@
             <Dependency>python-cairo-devel</Dependency>
             <Dependency>python-numpy</Dependency>
         </BuildDependencies>
-        <Patches>
-            <Patch level="1">pygtk-2.13.0-fix-codegen-location.patch</Patch>
-            <Patch level="1">fix-underlinking.patch</Patch>
-        </Patches>
     </Source>
 
     <Package>
@@ -50,7 +46,7 @@
     <Package>
         <Name>pygtk-demo</Name>
         <IsA>app:gui</IsA>
-        <Summary>PyGTK demo applications</Summary>
+        <Summary>Demo applications for pygtk</Summary>
         <RuntimeDependencies>
             <Dependency releaseFrom="11">pygtk</Dependency>
         </RuntimeDependencies>
@@ -64,7 +60,7 @@
     <Package>
         <Name>pygtk-docs</Name>
         <IsA>data:doc</IsA>
-        <Summary>PyGTK reference documents</Summary>
+        <Summary>Reference documents for pygtk</Summary>
         <RuntimeDependencies>
             <Dependency releaseFrom="11">pygtk</Dependency>
         </RuntimeDependencies>
@@ -89,6 +85,17 @@
     </Package>
 
     <History>
+        <Update release="14">
+            <Date>2010-11-26</Date>
+            <Version>2.22.0</Version>
+            <Comment>
+                * Version bump.
+                * Update summaries and add missing translations.
+                * Remove unrequired patches.
+            </Comment>
+            <Name>Gökmen Görgen</Name>
+            <Email>gkmngrgn@gmail.com</Email>
+        </Update>
         <Update release="13">
             <Date>2010-10-13</Date>
             <Version>2.16.0</Version>
